# multiverse

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  conanfile.py  conanfile.txt  vcpkg.json
.github/workflows/: regression.yml
cmake/: mltvrs.in.pc  mltvrsConfig.in.cmake  mltvrs_shop.in.pc  project-config.cmake  project-depends.in.cmake
mltvrs/: CMakeLists.txt  chrono.hpp  execution.hpp  functional.hpp  generator.hpp  interval.hpp  lazy.hpp  multiverse.hpp  ranges.hpp  stop_token.hpp  string_literal.hpp
mltvrs/async/: CMakeLists.txt  concepts.hpp  coroutine.hpp  cppcoro_task.hpp  execute.hpp  future.hpp  generator.hpp  task.hpp  this_thread.hpp  type_traits.hpp
mltvrs/async/ipp/: coroutine.ipp  execute.ipp  future.ipp  generator.ipp  task.ipp  this_thread.ipp
mltvrs/async/test/: test_coroutine.cpp  test_future.cpp  test_generator.cpp  test_task.cpp
mltvrs/ietf/: CMakeLists.txt  raw_encoding.hpp  rfc4648.hpp
mltvrs/ietf/ipp/: rfc4648.ipp
mltvrs/ietf/test/: test_raw_encoding.cpp  test_rfc4648.cpp
mltvrs/ipp/: generator.ipp  interval.ipp  lazy.ipp  string_literal.ipp
mltvrs/shop/: CMakeLists.txt  stripe.hpp
mltvrs/shop/ipp/: stripe.ipp
mltvrs/shop/src/: stripe.cpp
mltvrs/shop/test/: test_stripe.cpp
mltvrs/test/: test_generator.cpp  test_lazy.cpp  test_main.cpp  test_overload.cpp
